--- a/index.html
+++ b/index.html
@@ -844,6 +844,7 @@
       padding: 16px;
       border-radius: 6px;
       background-color: rgb(255 255 255 / 25%);
+      box-shadow: 0 1px 8px rgb(0 0 0 / 20%);
     }
 
     .outro .contact-form > label {
