workaround for safari problem when sliding into english page

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
       <div class="services-content">
         <ul class="services-titles">
           <li tabindex="0" aria-describedby="translation-desc-en">Translation</li>
-          <li tabindex="0" aria-describedby="editing-desc-en">Editing</li>
-          <li tabindex="0" aria-describedby="copywriting-desc-en">Copywriting</li>
+          <li tabindex="0" aria-describedby="proofreading-desc-en">Proofreading</li>
           <li tabindex="0" aria-describedby="transcreation-desc-en">Transcreation</li>
+          <li tabindex="0" aria-describedby="copywriting-desc-en">Copywriting</li>
         </ul>
         <ul class="services-descriptions">
           <li id="translation-desc-en">Translation's description... Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit hic officiis debitis vero quod, adipisci ipsum, officia aut obcaecati minus libero voluptatem neque. Repellendus ducimus quas error recusandae aliquid facere.</li>
-          <li id="editing-desc-en">Editing's description... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus asperiores suscipit nulla porro possimus vero et aut nemo, laboriosam magni dolorum blanditiis nesciunt amet commodi tempore, vitae, repudiandae culpa aperiam. Id deserunt fugit quibusdam fuga esse praesentium blanditiis consequatur, voluptatum commodi voluptatibus ea expedita sit officiis, dolores facilis sequi iusto! Voluptates dicta laboriosam pariatur, dolorem blanditiis nostrum, atque reprehenderit nam ratione quam quia dolorum assumenda suscipit eius minima, fugiat cupiditate error delectus sapiente architecto quasi impedit veniam aliquam voluptatem? Totam veniam et eum qui molestias, nostrum delectus similique expedita mollitia id corporis nam molestiae laboriosam vel rerum unde repellendus autem?</li>
-          <li id="copywriting-desc-en">Copywriting's description... Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, asperiores animi. Distinctio sint minus laborum dolorem! Animi quidem quas rem, ea ab illum accusantium. Eaque optio consectetur, vero veritatis, laudantium ipsum nihil beatae labore possimus ratione exercitationem consequatur explicabo sequi maxime odit culpa officia tenetur? Eaque, aliquid! Labore, explicabo cum?</li>
+          <li id="proofreading-desc-en">Editing's description... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus asperiores suscipit nulla porro possimus vero et aut nemo, laboriosam magni dolorum blanditiis nesciunt amet commodi tempore, vitae, repudiandae culpa aperiam. Id deserunt fugit quibusdam fuga esse praesentium blanditiis consequatur, voluptatum commodi voluptatibus ea expedita sit officiis, dolores facilis sequi iusto! Voluptates dicta laboriosam pariatur, dolorem blanditiis nostrum, atque reprehenderit nam ratione quam quia dolorum assumenda suscipit eius minima, fugiat cupiditate error delectus sapiente architecto quasi impedit veniam aliquam voluptatem? Totam veniam et eum qui molestias, nostrum delectus similique expedita mollitia id corporis nam molestiae laboriosam vel rerum unde repellendus autem?</li>
           <li id="transcreation-desc-en">Transcreation's description... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam esse porro neque eligendi voluptatem sunt voluptates velit tempora blanditiis fugit.</li>
+          <li id="copywriting-desc-en">Copywriting's description... Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, asperiores animi. Distinctio sint minus laborum dolorem! Animi quidem quas rem, ea ab illum accusantium. Eaque optio consectetur, vero veritatis, laudantium ipsum nihil beatae labore possimus ratione exercitationem consequatur explicabo sequi maxime odit culpa officia tenetur? Eaque, aliquid! Labore, explicabo cum?</li>
         </ul>
       </div>
     </section>
@@ -265,15 +265,15 @@
       <div class="services-content">
         <ul class="services-titles">
           <li tabindex="0" aria-describedby="translation-desc-es">Translation</li>
-          <li tabindex="0" aria-describedby="editing-desc-es">Editing</li>
-          <li tabindex="0" aria-describedby="copywriting-desc-es">Copywriting</li>
+          <li tabindex="0" aria-describedby="proofreading-desc-es">Proofreading</li>
           <li tabindex="0" aria-describedby="transcreation-desc-es">Transcreation</li>
+          <li tabindex="0" aria-describedby="copywriting-desc-es">Copywriting</li>
         </ul>
         <ul class="services-descriptions">
           <li id="translation-desc-es">Translation's description... Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit hic officiis debitis vero quod, adipisci ipsum, officia aut obcaecati minus libero voluptatem neque. Repellendus ducimus quas error recusandae aliquid facere.</li>
-          <li id="editing-desc-es">Editing's description... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus asperiores suscipit nulla porro possimus vero et aut nemo, laboriosam magni dolorum blanditiis nesciunt amet commodi tempore, vitae, repudiandae culpa aperiam. Id deserunt fugit quibusdam fuga esse praesentium blanditiis consequatur, voluptatum commodi voluptatibus ea expedita sit officiis, dolores facilis sequi iusto! Voluptates dicta laboriosam pariatur, dolorem blanditiis nostrum, atque reprehenderit nam ratione quam quia dolorum assumenda suscipit eius minima, fugiat cupiditate error delectus sapiente architecto quasi impedit veniam aliquam voluptatem? Totam veniam et eum qui molestias, nostrum delectus similique expedita mollitia id corporis nam molestiae laboriosam vel rerum unde repellendus autem?</li>
-          <li id="copywriting-desc-es">Copywriting's description... Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, asperiores animi. Distinctio sint minus laborum dolorem! Animi quidem quas rem, ea ab illum accusantium. Eaque optio consectetur, vero veritatis, laudantium ipsum nihil beatae labore possimus ratione exercitationem consequatur explicabo sequi maxime odit culpa officia tenetur? Eaque, aliquid! Labore, explicabo cum?</li>
+          <li id="proofreading-desc-es">Editing's description... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatibus asperiores suscipit nulla porro possimus vero et aut nemo, laboriosam magni dolorum blanditiis nesciunt amet commodi tempore, vitae, repudiandae culpa aperiam. Id deserunt fugit quibusdam fuga esse praesentium blanditiis consequatur, voluptatum commodi voluptatibus ea expedita sit officiis, dolores facilis sequi iusto! Voluptates dicta laboriosam pariatur, dolorem blanditiis nostrum, atque reprehenderit nam ratione quam quia dolorum assumenda suscipit eius minima, fugiat cupiditate error delectus sapiente architecto quasi impedit veniam aliquam voluptatem? Totam veniam et eum qui molestias, nostrum delectus similique expedita mollitia id corporis nam molestiae laboriosam vel rerum unde repellendus autem?</li>
           <li id="transcreation-desc-es">Transcreation's description... Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam esse porro neque eligendi voluptatem sunt voluptates velit tempora blanditiis fugit.</li>
+          <li id="copywriting-desc-es">Copywriting's description... Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, asperiores animi. Distinctio sint minus laborum dolorem! Animi quidem quas rem, ea ab illum accusantium. Eaque optio consectetur, vero veritatis, laudantium ipsum nihil beatae labore possimus ratione exercitationem consequatur explicabo sequi maxime odit culpa officia tenetur? Eaque, aliquid! Labore, explicabo cum?</li>
         </ul>
       </div>
     </section>
@@ -1096,6 +1096,9 @@
       bodyShift = 0
       body.style.left = '' + bodyShift
       connectExperienceBullets(englishPage)
+
+      englishPage.style.width = '99.99999vw'
+      setTimeout(() => englishPage.style.width = '100vw')
     }
 
     function renderSpanishPage() {
