change emojis with more universal ones

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="intro-text">
           <h1 class="intro-title">
             Howdy, I'm Ángela.
-            <span style="display: inline-block; transform: rotate(-30deg)">🖐🏻</span>
+            <span style="display: inline-block; transform: rotate(-30deg)">🖐</span>
           </h1>
           <p class="intro-description">
             A <strong>professional translator</strong> something something.
@@ -40,7 +40,7 @@
     </section>
 
     <section class="services">
-      <h2>Here are the <strong>services</strong> I provide <span class="emoji">🙇🏻‍♀️</span></h2>
+      <h2>Here are the <strong>services</strong> I provide <span class="emoji">🙇‍♀️</span></h2>
       <div class="services-content">
         <ul class="services-titles">
           <li tabindex="0" aria-describedby="translation-desc-en">Translation</li>
@@ -172,7 +172,7 @@
     </section>
 
     <section class="experience">
-      <h2>Here is my <strong>professional experience</strong> so far <span class="emoji">👵🏻</span></h2>
+      <h2>Here is my <strong>professional experience</strong> so far <span class="emoji">👵</span></h2>
       <ol class="experience-list education-list">
         <li>
           <div class="bullet">2016</div>
