change emojis with more universal ones

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       <div class="outro-content centered">
         <div class="contact-area">
           <div class="contact-side">
-            <h2><span class="contact-title-content">Reach out! <span class="emoji">✍️</span></span></h2>
+            <h2><span class="contact-title-content">Reach out! <span class="emoji">📝</span></span></h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti eum, accusamus labore id vel molestias nihil a quisquam adipisci harum?</p>
           </div>
           <div class="contact-main">
@@ -424,7 +424,7 @@
       <div class="outro-content centered">
         <div class="contact-area">
           <div class="contact-side">
-            <h2><span class="contact-title-content">Reach out! <span class="emoji">✍️</span></span></h2>
+            <h2><span class="contact-title-content">Reach out! <span class="emoji">📝</span></span></h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti eum, accusamus labore id vel molestias nihil a quisquam adipisci harum?</p>
           </div>
           <div class="contact-main">
