--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
     }
 
     let bodyShift
-    const bodyShiftStep = 5
+    const bodyShiftStep = 2
 
     renderPageBasedOnUrl()
     window.onpopstate = renderPageBasedOnUrl
@@ -1048,14 +1048,14 @@
       spanishPage.hidden = false
       englishPage.style.overflowY = 'auto'
       setUrlLang('es', false)
-      requestAnimationFrame(slideToSpanishPage)
+      slideToSpanishPage()
     }
 
     spanishPage.querySelector('.lang-button').onclick = () => {
       englishPage.hidden = false
       englishPage.style.overflowY = 'auto'
       setUrlLang('en', false)
-      requestAnimationFrame(slideToEnglishPage)
+      slideToEnglishPage()
     }
 
     function setUrlLang(lang, replace) {
@@ -1073,7 +1073,7 @@
       body.style.left = `-${bodyShift}vw`
 
       if (bodyShift < 100)
-        requestAnimationFrame(slideToSpanishPage)
+        setTimeout(slideToSpanishPage)
       else
         renderSpanishPage()
     }
@@ -1083,7 +1083,7 @@
       body.style.left = `-${bodyShift}vw`
 
       if (bodyShift > 0)
-        requestAnimationFrame(slideToEnglishPage)
+        setTimeout(slideToEnglishPage)
       else
         renderEnglishPage()
     }
